Fix sticky navbar positioning on Safari

--- a/src/style/_nav.scss
+++ b/src/style/_nav.scss
@@ -1,4 +1,5 @@
 .nav {
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
 
